--- a/index.html
+++ b/index.html
@@ -348,18 +348,18 @@
             <div class="row">
                 <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
                     <div class="foot-img">
+                        <img src="images/MYH_finewines_Logo_footer.png" alt="MYH" />
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
-                        <img src="/images/MYH_finewines_Logo_footer.png" alt="MYH" />
                     </div>
                     <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
-                    <div class="foot-txt">© 2015 MYH Fine Wines Glassware. All rights reserved.</div>
+                    <div class="foot-txt">© 2015 MYH Fine Wines. All rights reserved.</div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <div class="foot-cont-txt"><span style="font-family:'Raleway-Regular'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
-                    <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Regular'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                    <div class="foot-cont-txt"><span style="font-family:'Raleway-Medium'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                    <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                    <div class="foot-info-txt botMargin2">+86 158 1005 3940 (English)<br />+86 139 1173 2153(Mandarin/English)</div>
+                    <div class="foot-info-txt botMargin2">+86 158 1005 3940 (Mandarin/English)<br />+852 8120 7488(English)</div>
                     <div class="foot-info-txt">sales@myhfinewines.com<br />www.myhfinewines.com</div>
                 </div>
             </div>
