--- a/index.html
+++ b/index.html
@@ -352,14 +352,14 @@
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
                     </div>
                     <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
-                    <div class="foot-txt">© 2015 MYH Fine Wines. All rights reserved.</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines. All rights reserved.</div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <div class="foot-cont-txt"><span style="font-family:'Raleway-Medium'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
                     <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                    <div class="foot-info-txt botMargin2">+86 158 1005 3940 (Mandarin/English)<br />+852 8120 7488(English)</div>
+                    <div class="foot-info-txt botMargin2">+<span style="font-family:'Roboto-Light';">86 158 1005 3940</span> (Mandarin/English)<br /><span style="font-family:'Roboto-Light';">+852 8120 7488</span>(English)</div>
                     <div class="foot-info-txt">sales@myhfinewines.com<br />www.myhfinewines.com</div>
                 </div>
             </div>
