--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <h3 class="glass-title">Burgundy</h3>
                     <div class="glass-param">
                         <div class="param">Height:<span class="param-number">230mm</span></div>
-                        <div class="param">Volume:<span class="param-number">960mm</span></div>
+                        <div class="param">Volume:<span class="param-number">960ml</span></div>
                     </div>
                     <div class="description">
                         <div class="generalDesc">For structured, elegant red and white wines with depth and persistence</div>
@@ -185,7 +185,7 @@
                     <h3 class="glass-title">Bordeaux</h3>
                     <div class="glass-param">
                         <div class="param">Height:<span class="param-number">240mm</span></div>
-                        <div class="param">Volume:<span class="param-number">765mm</span></div>
+                        <div class="param">Volume:<span class="param-number">765ml</span></div>
                     </div>
                     <div class="description">
                         <div class="generalDesc">For full-bodied wines, supported by more tannins and extract</div>
@@ -200,7 +200,7 @@
                     <h3 class="glass-title">Universal</h3>
                     <div class="glass-param">
                         <div class="param">Height:<span class="param-number">235mm</span></div>
-                        <div class="param">Volume:<span class="param-number">530mm</span></div>
+                        <div class="param">Volume:<span class="param-number">530ml</span></div>
                     </div>
                     <div class="description">
                         <div class="generalDesc">The versatile choice for both red and white fine wines</div>
@@ -215,7 +215,7 @@
                     <h3 class="glass-title">White Wine</h3>
                     <div class="glass-param">
                         <div class="param">Height:<span class="param-number">230mm</span></div>
-                        <div class="param">Volume:<span class="param-number">400mm</span></div>
+                        <div class="param">Volume:<span class="param-number">400ml</span></div>
                     </div>
                     <div class="description">
                         <div class="generalDesc">For elegant, classical fruit forward white wines and medium-bodied red wines</div>
@@ -232,7 +232,7 @@
                     <h3 class="glass-title">Champagne</h3>
                     <div class="glass-param">
                         <div class="param">Height:<span class="param-number">240mm</span></div>
-                        <div class="param">Volume:<span class="param-number">220mm</span></div>
+                        <div class="param">Volume:<span class="param-number">220ml</span></div>
                     </div>
                     <div class="description">
                         <div class="generalDesc">For the noble, elegant sparkling wines of the world</div>
@@ -247,7 +247,7 @@
                     <h3 class="glass-title">Sweet Wine</h3>
                     <div class="glass-param">
                         <div class="param">Height:<span class="param-number">230mm</span></div>
-                        <div class="param">Volume:<span class="param-number">320mm</span></div>
+                        <div class="param">Volume:<span class="param-number">320ml</span></div>
                     </div>
                     <div class="description">
                         <div class="generalDesc">For classic dessert wines, old Vintage Champagnes and barrel-aged distillates</div>
@@ -262,7 +262,7 @@
                     <h3 class="glass-title">Digestif</h3>
                     <div class="glass-param">
                         <div class="param">Height:<span class="param-number">210mm</span></div>
-                        <div class="param">Volume:<span class="param-number">140mm</span></div>
+                        <div class="param">Volume:<span class="param-number">140ml</span></div>
                     </div>
                     <div class="description">
                         <div class="generalDesc">For fine, harmonious distillates or Liqueurs</div>
@@ -277,7 +277,7 @@
                     <h3 class="glass-title">Beer</h3>
                     <div class="glass-param">
                         <div class="param">Height:<span class="param-number">223mm</span></div>
-                        <div class="param">Volume:<span class="param-number">350mm</span></div>
+                        <div class="param">Volume:<span class="param-number">350ml</span></div>
                     </div>
                     <div class="description">
                         <div class="generalDesc">For finely hopped Pilsner and Lager beers</div>
