--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet" />
     <!-- Custom css------->
     <link href="stylesheets/custom.css" rel="stylesheet" />
+    <link href="stylesheets/header_footer.css" rel="stylesheet" />
     <!-- Master Slider core CSS -->
     <link href="stylesheets/masterslider.css" rel="stylesheet" />
 
@@ -57,7 +58,7 @@
                     <a href="#" class="lang">ENGLISH</a>|
                     <a href="#" class="lang">中国</a>
                 </div>
-            </div><!-- /.div collapse -->
+            </div>
         </div><!-- /.container-fluid -->
     </nav>
     <section id="mainSlider">
